# coli

./: .gitignore  CHANGES.md  CMakeLists.txt  Config.cmake.in  README.md  version.h.in
docs/: CMakeLists.txt  doxy.in
include/coli/: game-engine.h  utility.h
include/coli/game/: object.h  scene.h
include/coli/game/components/: layer.h  transform.h
include/coli/generic/: engine.h  system.h
include/coli/geometry/: mesh.hpp  shape.h  vertex.h
include/coli/graphics/: buffer.h  context.h  program.h  resource.h  shader.h  vertex_array.h  window.h
include/coli/physics/: body.h  world.h
libs/glad/: CMakeLists.txt  Config.cmake.in
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: utility.cpp
src/game/: object.cpp  scene.cpp
src/game/components/: layer.cpp  transform.cpp
src/generic/: engine.cpp  system.cpp
src/geometry/: shape.cpp  vertex.cpp
src/graphics/: buffer.cpp  context.cpp  program.cpp  resource.cpp  shader.cpp  shape.cpp  vertex_array.cpp  window.cpp
src/physics/: body.cpp  world.cpp
tests/: CMakeLists.txt
tests/src/: components.cpp  context.cpp  graphics.cpp  object.cpp  scene.cpp  version.cpp
tests/src/game/: object.cpp  scene.cpp
tests/src/geometry/: mesh.cpp  shape.cpp
tests/src/graphics/: buffer.cpp  context.cpp  program.cpp  shader.cpp  vertex_array.cpp  window.cpp
tests/src/physics/: body.cpp
